:bug: fix csrf token

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
     <meta property="og:title" content="AlchemyLanguage demo" />
     <meta property="og:description" content="AlchemyLanguage is a collection of APIs that offer text analysis through natural language processing. This set of APIs can analyze text to help you understand its concepts, entities, keywords, sentiment, and more."
     />
+    <meta name="ct" content="<$= locals.ct $>">
     <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/app.css">
